Made map dark mode and fit vertically, TODO fix horizontal

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,19 @@ body {
   box-sizing: border-box;
 }
 
+#root,
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.map-container {
+  height: 100%;
+  width: 100%;
+}
+
 h1,
 h2,
 h3,
